# Life-Optimizer

./: analyze_health.ipynb  analyze_health.py
life-optimizer/: README.md  pyproject.toml
life-optimizer/src/: app.py
life-optimizer/src/types/: index.py
my_whoop_data_2026_02_11/: journal_entries.csv  physiological_cycles.csv  sleeps.csv  subjective_happiness.csv  workouts.csv
