[tool.poetry]
name = "life-optimizer"
version = "0.1.0"
description = "A project for optimizing life through data analysis and machine learning."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
numpy = "^1.21.0"
tensorflow = "^2.6.0"
scikit-learn = "^0.24.2"
onnxruntime = "^1.8.0"
tf2onnx = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"